# tiny

./: Cargo.toml  LICENSE  README.md
src/: main.rs
src/algorithm/: mod.rs  utils.rs
src/configuration/: mod.rs
src/daemon/: mod.rs
src/exchange/: mod.rs
src/exchange/binance/: mod.rs  utils.rs
src/exchange/bitget/: mod.rs  utils.rs
src/exchange/bitmart/: mod.rs  utils.rs
src/exchange/bybit/: mod.rs  utils.rs
src/exchange/coinbase/: mod.rs  utils.rs
src/exchange/crypto/: mod.rs  utils.rs
src/exchange/gate/: mod.rs  utils.rs
src/exchange/huobi/: mod.rs  utils.rs
src/exchange/kraken/: mod.rs  utils.rs
src/exchange/mexc/: mod.rs  utils.rs
src/exchange/okx/: mod.rs  utils.rs
src/logger/: mod.rs
src/mail/: mod.rs
src/misc/: mod.rs
src/mov/: mod.rs  multisig.rs  utils.rs
src/process/: mod.rs
src/prom/: mod.rs
src/request/: mod.rs
src/storage/: mod.rs
