[package]
name = "tinyoracle"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "tinyd"
path = "src/main.rs"

[profile.release]
opt-level = 'z'
debug = 0
debug-assertions = false
strip= "debuginfo"
overflow-checks = true
lto = true
panic = 'unwind'
incremental = false
codegen-units = 16
rpath = false

[target.'cfg(any(target_os = "linux"))'.dependencies]
nix = "0.26"

[dependencies]
anyhow = "1"
tokio = { version = "1.3", features = ["full"] }
clap = { version = "4.3", features = ["derive"]}
reqwest = { version = "0.11", features = ["blocking", "json"] }
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9.21"
serde_json = "1.0.59"
dotenv = "0.15.0"
log = "0.4.8"
log4rs = "1.2.0"
postage = "0.5.0"
mail-send = "0.4"
thiserror = "1.0"
single-instance = "0.3"
sysinfo = "0.29.0"
lazy_static = "1.4.0"
prometheus = { version = "0.13.3", features = ["push"] }
tiny-bip39 = "1.0.0"
base64_light = "0.1.5"
sui = { git = "https://github.com/MystenLabs/sui", branch = "mainnet" }
sui-json = { git = "https://github.com/MystenLabs/sui", branch = "mainnet" }
sui-types = { git = "https://github.com/MystenLabs/sui", branch = "mainnet" }
sui-sdk = { git = "https://github.com/MystenLabs/sui", branch = "mainnet" }
sui-keys = { git = "https://github.com/MystenLabs/sui", branch = "mainnet" }
sui-json-rpc-types = { git = "https://github.com/MystenLabs/sui", branch = "mainnet" }
shared-crypto = { git = "https://github.com/MystenLabs/sui", branch = "mainnet" }
move-core-types = { git = "https://github.com/move-language/move", rev = "be52c7118aeb94fbbfa12590e420a75e8ddfec93", features = ["address20"] }
